<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strides lables -->
    <string name="app_name">Strides</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to Strides!</string>
    <string name="empty_string"> </string>
    
    <!-- Labels -->
    <string name="info_btn_lbl">Info</string>
    <string name="start_btn_lbl">Start Here</string>
    <string name="back_btn_lbl">Go Back</string>
    <string name="singin_btn_lbl">sign in</string>
    <string name="create_btn_lbl">create account</string>
    <string name="rememberme_btn_lbl">remember me</string>
    
    <!-- Banners -->
    <string name="info_banner">INFO PAGE</string>
    <string name="signin_banner">SIGN IN</string>
    
    <!-- Main Text -->
    <string name="info_beginning">
        With this app you can set personal goals called \'Strides\' and share them with friends.
       	If your friend takes the stride with you, you can keep track of each others Strides.
    </string>
    <string name="info_body"> 
        Don\'t slow down your strides, though! Your friends can send you a \'Check\' saying:
        \"Hey, keep it up slacker!\" showing you their progress; keeping you motivated.
    </string>

</resources>
