<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- Info banner -->
    <TextView android:id="@+id/tv_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_banner"
        android:textSize="40sp" />

    <!-- Info begenning -->
    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_banner"
        android:layout_below="@+id/tv_banner"
        android:layout_marginTop="30dp"
        android:text="@string/info_beginning" />

    <!-- Info body -->
   	<TextView
   	    android:id="@+id/tv_body"
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_alignLeft="@+id/tv_info"
   	    android:layout_below="@+id/tv_info"
   	    android:layout_marginTop="39dp"
   	    android:text="@string/info_body" />

</RelativeLayout>

