<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/signin_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/signin_banner"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/et_usremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_usrpassword"
        android:layout_below="@+id/signin_banner"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_usrpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_usremail"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_usrpassword"
        android:layout_below="@+id/et_usrpassword"
        android:layout_toLeftOf="@+id/btn_create"
        android:onClick="signInBtnClicked"
        android:text="@string/singin_btn_lbl" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/et_usrpassword"
        android:layout_below="@+id/et_usrpassword"
        android:onClick="createBtnClicked"
        android:text="@string/create_btn_lbl" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_signin"
        android:layout_below="@+id/btn_signin"
        android:text="@string/rememberme_btn_lbl" />

</RelativeLayout>